Add uav_ugv follow sim

--- a/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
@@ -100,5 +100,7 @@ px4_add_romfs_files(
 	17001_flightgear_tf-g1
 	17002_flightgear_tf-g2
 
+	18001_gz_x500_dcamera
+
 	# [22000, 22999] Reserve for custom models
 )
